hide and show features are fixed for show all and hide all

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -234,8 +234,19 @@ body {
 }
 #hide-posts-index {
   font-family: cursive;
-  
+
 }
 #posts-index {
+  font-family: cursive;
+}
+.cpw{
+  color: lime;
+  font-family: cursive;
+
+}
+#change-password {
+  font-family: cursive;
+}
+#sign-out{
   font-family: cursive;
 }
