Landing page css updated

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -16,7 +16,7 @@
   margin-left:500px;
 }
 .make{
-  margin-left:500px;
+  margin-left:520px;
 }
 #blog-post {
   background: black;
@@ -246,7 +246,14 @@ body {
 }
 #change-password {
   font-family: cursive;
+
 }
 #sign-out{
   font-family: cursive;
+}
+.sign-in {
+  margin-left: 400px;
+}
+.sign-up {
+  margin-left: 320px;
 }
