WOnky scss having issues with moving sign in and sign out with functionality

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -10,7 +10,7 @@
   justify-content: center;
 
   background-size: cover;
-  margin-left: 300px;
+  margin-left: 320px;
 }
 .title{
   margin-left:500px;
@@ -251,9 +251,9 @@ body {
 #sign-out{
   font-family: cursive;
 }
-.sign-in {
-  margin-left: 400px;
-}
-.sign-up {
-  margin-left: 320px;
-}
+// .sign-in {
+//   margin-left: 410px;
+// }
+// .sign-up {
+//   margin-left: 30px;
+// }
