Fixed message display and style

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -251,8 +251,22 @@ body {
 #sign-out{
   font-family: cursive;
 }
-// .sign-in {
-//   margin-left: 410px;
+#posts-display {
+  color: lime;
+  font-family: cursive;
+}
+#error-message {
+  color: pink;
+  font-family: cursive;
+
+}
+#posts-message {
+  color: lime;
+  font-family: cursive;
+}
+// // //
+// sign-in {
+// //   margin-left: 410px;
 // }
 // .sign-up {
 //   margin-left: 30px;
