Removed bug of font not being able to load. Commented it out

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -23,10 +23,10 @@
   color: lime;
   font-family: cursive;
 }
-@font-face {
-  font-family: Clip;
-  src: url("https://acupoftee.github.io/fonts/Clip.ttf");
-}
+// @font-face {
+//   font-family: Clip;
+//   src: url("https://acupoftee.github.io/fonts/Clip.ttf");
+// }
 
 body {
   background-color: #141114;
